[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Themes.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/play.png" type="Texture" id=3]
[ext_resource path="res://res/left_arrow.png" type="Texture" id=4]
[ext_resource path="res://res/right_arrow.png" type="Texture" id=5]

[node name="MainMenu" type="Node2D"]

script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )

[node name="Themes" parent="." index="1" instance=ExtResource( 2 )]

[node name="Play_TextureButton" type="TextureButton" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 406.0
margin_top = 1641.0
margin_right = 626.0
margin_bottom = 1872.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="Left_TextureButton" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 172.0
margin_top = 1700.0
margin_right = 296.0
margin_bottom = 1824.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Right_TextureButton" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 759.0
margin_top = 1700.0
margin_right = 883.0
margin_bottom = 1824.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="Play_TextureButton" to="." method="_on_Play_TextureButton_pressed"]

[connection signal="pressed" from="Left_TextureButton" to="." method="_on_Left_TextureButton_pressed"]

[connection signal="pressed" from="Right_TextureButton" to="." method="_on_Right_TextureButton_pressed"]


